--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "name": "Twilio Mobile Quickstart",
   "description": "A simple Python server to distribute access tokens and route calls for your mobile app",
-  "repository": "https://github.com/twilio/voice-quickstart-server-python",
+  "repository": "https://github.com/jefflinwood/voice-quickstart-server-python",
   "keywords": [
     "twilio",
     "voice",
@@ -20,16 +20,16 @@
       "description": "Your Twilio API Key Secret",
       "required": true
     },
-    "PUSH_CREDENTIAL_SID": {
-      "description": "Your Twilio Push Credential Sid",
-      "required": true
+    "GCM_CREDENTIAL_SID": {
+      "description": "Your Twilio GCM Credential Sid",
+      "required": false
+    },
+    "APNS_CREDENTIAL_SID": {
+      "description": "Your Twilio APNS Credential Sid",
+      "required": false
     },
     "APP_SID": {
       "description": "Your TwiML App Sid that points to this web server",
-      "required": true
-    },
-    "AUTH_TOKEN": {
-      "description": "Your Twilio Auth Token",
       "required": true
     }
   }
